[package]
name = "uokcli"
version = "0.1.0"
authors = ["James Ravenscroft <james.ravenscroft@filament.uk.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
chrono = "0.4.6"
nix = "0.13.0"
http = "0.1.17"